# Library

./: Cargo.toml
my_fpro/: Cargo.toml
my_fpro/src/: lib.rs
mylib/: Cargo.toml
mylib/src/: lib.rs  main.rs
project/: Cargo.toml
project/src/: main.rs
src/: lib.rs
