[package]
name = "my_fpro"
version = "0.1.0"
authors = ["AbdullahHalari <droidabdullah@gmail.com>"]
edition = "2018"
description = "my first librarey"
license = "MIT"
repository = https://github.com/AbdullahHalari/library.gitc
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
